# winforensics-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  progress.md  pyproject.toml
tests/: test_basic.py  test_response_size.py
winforensics_mcp/: __init__.py  config.py  server.py
winforensics_mcp/collectors/: __init__.py  artifact_collector.py
winforensics_mcp/orchestrators/: __init__.py  execution_tracker.py  ioc_hunter.py  timeline_builder.py  user_activity_investigator.py
winforensics_mcp/parsers/: __init__.py  amcache_parser.py  browser_parser.py  csv_ingestor.py  evtx_parser.py  lnk_parser.py  mft_parser.py  pe_analyzer.py  prefetch_parser.py  registry_parser.py  shellbags_parser.py  srum_parser.py  usn_parser.py
